--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-
+streamlit==1.32.0
+ollama==0.1.0
+networkx==3.2.1
+pyvis==0.3.2
+pandas==2.1.4
+streamlit-chat==0.1.0
+requests==2.31.0
+psutil==5.9.6
