--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.32.0
-ollama==0.1.0
-Pillow==10.2.0
+streamlit==1.34.0
 requests==2.31.0
-psutil==5.9.6
-beautifulsoup4==4.12.3
+beautifulsoup4==4.12.2
+psutil==5.9.8
+dataclasses==0.6
+typing-extensions==4.9.0
